<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Support Language</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Do not have account? Sign up</string>
    <string name="changeLanguage">Change Language</string>
</resources>
